feat: rename app title to Eagle Vistorias e Perícias; remove test creds from login

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="stylesheet" href="/src/index.css" />
 
-    <title>Chef</title>
+    <title>Eagle Vistorias e Perícias</title>
 
     <meta property="og:image" content="/og-preview.png" />
   </head>
